--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       property="og:description"
      
     />
-    <title>Lívia 26/05/22</title>
+    <title>Certificados</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -56,15 +56,15 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#s-about">História</a></li>
+            <li><a href="#s-home">Inicio</a></li>
             <li>
-              <a href="#s-projects">Mensagem</a>
-            </li>
-            <li>
-              <a href="#s-services">Momentos</a>
-            </li>
-            <li>
-              <a href="#s-skills">Eventos</a>
+              <li><a href="#s-skills">2021 - 2022</a></li>
+              <li>
+                <a href="#um">2023 - 2024</a>
+              </li>
+              <li>
+                <a href="#dois">2025 - 2026</a>
+              </li>
             </li>
           </ul>
         </nav>
@@ -117,9 +117,9 @@
         <div class="grid-layout">
           <div id="skills">
             <article id="skills-text">
-              <h2 class="delaySmallReveal">Certificados 2021 - 2022 <span>.</span></h2>
+              <h2 class="delaySmallReveal">Certificados<span>.</span></h2>
               <p class="delayMediumReveal changeDescription">
-                *passe na foto para ler*
+                Certificados emitidos no perído de 2021 - 2022
               </p>
             </article>
 
@@ -215,9 +215,9 @@
           <div class="grid-layout">
             <div id="skills">
               <article id="skills-text">
-                <h2 class="delaySmallReveal">Certificados 2023 - 2024 <span>.</span></h2>
+                <h2 class="delaySmallReveal">Certificados<span>.</span></h2>
                 <p class="delayMediumReveal changeDescription">
-                  *passe na foto para ler*
+                  Certificados emitidos no perído de 2023 - 2024
                 </p>
               </article>
   
@@ -313,9 +313,9 @@
             <div class="grid-layout">
               <div id="skills">
                 <article id="skills-text">
-                  <h2 class="delaySmallReveal">Certificados 2025 - 2026 <span></span></h2>
+                  <h2 class="delaySmallReveal">Certificados<span></span></h2>
                   <p class="delayMediumReveal changeDescription">
-                    *passe na foto para ler*
+                    Certificados emitidos no perído de 2025 - 2026
                   </p>
                 </article>
     
