--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <article id="skills-text">
               <h2 class="delaySmallReveal">Certificados<span>.</span></h2>
               <p class="delayMediumReveal changeDescription">
-                Certificados emitidos no perído de 2021 - 2022
+                Emitidos no perído de 2021 - 2022
               </p>
             </article>
 
@@ -217,7 +217,7 @@
               <article id="skills-text">
                 <h2 class="delaySmallReveal">Certificados<span>.</span></h2>
                 <p class="delayMediumReveal changeDescription">
-                  Certificados emitidos no perído de 2023 - 2024
+                  Emitidos no perído de 2023 - 2024
                 </p>
               </article>
   
@@ -315,7 +315,7 @@
                 <article id="skills-text">
                   <h2 class="delaySmallReveal">Certificados<span></span></h2>
                   <p class="delayMediumReveal changeDescription">
-                    Certificados emitidos no perído de 2025 - 2026
+                    Emitidos no perído de 2025 - 2026
                   </p>
                 </article>
     
