--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
               <h1 class="delayMediumReveal">
                 <br />
                 <span id="home-name">Certificados</span><br />
-                <!--<span class="typewriter">
-                  Esse é um presente que eu fiz especialmente para você.
-                </span>-->
+                <span class="typewriter">
+                  Acesse em seu smartphone para uma navegação mais fluida.
+                </span>
               </h1>
               <a
                 href="#s-skills"
